corrected gap

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -40,10 +40,9 @@
         padding-right: 0;
     }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 576px) {
     .place {
         gap: 32px;
-        max-width: 320px;
     }
 }
 
